# ouaja

./: .env.example  .gitattributes  .gitignore  .pylintrc  README.md  cmd.md  conversation.txt  live.scd  main.py  nano-setup.scd  ouaja-buf.scd  pyproject.toml  sound-engine.scd  synth.scd  test.py
app/: arg.py  camera.py  const.py  entity.py  firefly.py  input.py  line.py  main.py  model.py  particles.py  scene.py  screen.py  shaders.py  sprite.py  states.py  transitions.py  utils.py
assets/shaders/: compute.glsl  screen_fragment.glsl  screen_vertex.glsl
assets/ui/Hexany's 1-bit UI Panels/: CHANGELOG.txt
assets/ui/hexany/: INFO.txt  LICENSE.txt
dataset/: mlp.json  mlp2.json  paramsdata.json  xydata.json
dataset/new/: paramsdata.json  xydata.json
dataset/new2/: paramsdata.json  xydata.json
