[project]
name = "ouaja"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "easing-functions>=1.0.4",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "openai>=1.86.0",
    "pygame>=2.6.1",
    "pygame-render>=1.4.0",
    "pygame-textinput>=1.0.1",
    "python-osc>=1.9.3",
]
